# pxpipe

./: CHANGELOG.md  FINDINGS.md  README.md  package.json  pnpm-workspace.yaml
demo/cost-ab/: README.md  a.sh  b.sh  setup.sh
demo/effective-context/: README.md  a.sh  b.sh  setup.sh
docs/: LEGIBILITY-AUDIT-2026-07-01.md
eval/sol-profile/: QUALITY_RESULTS.md  README.md  RGB_SEPARATION_RESULTS.md  gist-recall-jbmono12-rgb-rbg-results.json  gist-recall.mjs  jbmono12-rgb-order.mjs  mixed-density-color.mjs  novel-arithmetic-jbmono12-rgb-results.json  novel-arithmetic.mjs  rgb-channel-overprint.mjs  rgb-multiplex-renderer.mjs  rgb-separation-diagnostic-results.json  rgb-separation-diagnostic.mjs  unicode-rgb-overprint.mjs
scripts/: diff_render.py  gen-atlas.ts  visual_compare.py
src/: dashboard.ts  node.ts  proxy.py  sessions.ts  worker.ts
src/core/: applicability.ts  export.ts  factsheet.ts  google.ts  gpt-model-profiles.ts  history.ts  library.ts  messages-responses-bridge.ts  openai-history.ts  openai-savings.ts  openai.ts  proxy.ts  render.ts  tracker.ts  transform.ts
src/dashboard/: fragments.ts
src/rust/: Cargo.toml
src/rust/examples/: diff_render.rs  render_sample.rs
src/rust/src/: font.rs  lib.rs  main.rs  proxy.rs  render.rs  stats.rs  transform.rs
tests/: cache-stability-e2e.test.ts  dashboard-api.test.ts  factsheet.test.ts  google.test.ts  history.test.ts  openai-gpt5.test.ts  openai-history.test.ts  paging.test.ts  proxy-usage.test.ts  public-api.test.ts  render.test.ts  savings-honesty.test.ts  savings-math-e2e.test.ts  sessions.test.ts  tracker.test.ts
