[package]
name = "claude-image-proxy"
version = "0.1.0"
edition = "2021"
description = "Token-saving proxy for Claude Code that renders system prompt + tools as images"
license = "MIT"
repository = "https://github.com/your/claude-image-proxy"

[[bin]]
name = "claude-image-proxy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (incoming from Claude Code)
axum = { version = "0.7", features = ["macros"] }

# HTTP client (upstream to api.anthropic.com) - rustls so no OpenSSL link
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "http2"] }

# JSON parse + manipulate
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Font rasterization (TTF -> glyph bitmaps)
ab_glyph = "0.2"

# PNG encoding
png = "0.17"

# Base64 for image data URI
base64 = "0.22"

# Hashing for render-cache keys (deterministic across turns)
sha2 = "0.10"

# In-memory cache (thread-safe, no allocations on hit)
dashmap = "6"

# Bytes manipulation
bytes = "1"

# CLI args parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Misc
once_cell = "1"

# Error handling
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.release-small]
inherits = "release"
opt-level = "z"

[lib]
name = "claude_image_proxy"
path = "src/lib.rs"
